# msp430fr5994

./: .clang-format  .gitignore  CMakeLists.txt  msp430fr5994.ld  readme.adoc  watch_disasm.sh  watch_doc.sh
doc/: Doxyfile
lib/: msp430fr5994.h  rt.S
lib/drivers/: clock.h  gpio.h  pmm.h  timer.h  tools.h  wdt_a.h
src/: Blinker.cpp  DocExamples.cpp  main.cpp  rt.S
src/lib/: gpio.h  msp430fr5994.h  pmm.h  rt.S  timer.h  tools.h  wdt_a.h
