CMAKE_MINIMUM_REQUIRED(VERSION 3.16)


SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_SYSTEM_PROCESSOR msp430)
SET(TRIPLE msp430-none-elf)
SET(MSP_PREFIX msp430-elf-)
SET(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/msp430fr5994.ld)
#set(COMP_ARCH "-mcpu=msp430X -mmcu=msp430fr5994")
SET(COMP_ARCH "-mcpu=msp430X -mmcu=msp430fr5994")
#SET(COMP_ARCH "-mcpu=msp430 -mmcu=msp430fr5994")
#SET(COMP_ARCH "-mcpu=msp430")
SET(LINKER_FLAGS "-nostdlib -static -s")
SET(C_FLAGS "-O3")
SET(ASM_FLAGS "")

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_ASM_COMPILER ${MSP_PREFIX}as)
SET(CMAKE_C_COMPILER ${MSP_PREFIX}gcc)
SET(CMAKE_CXX_COMPILER ${MSP_PREFIX}g++)
SET(CMAKE_CXX_COMPILER_AR ${MSP_PREFIX}ar)
SET(CMAKE_CXX_COMPILER_RANLIB ${MSP_PREFIX}ranlib)

#SET(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

SET(CMAKE_CXX_FLAGS "${COMP_ARCH} ${C_FLAGS}")
SET(CMAKE_C_FLAGS "${COMP_ARCH} ${C_FLAGS}")
SET(CMAKE_ASM_FLAGS "${COMP_ARCH} ${ASM_FLAGS}")
SET(LD_FLAGS "${LINKER_FLAGS}")
SET(LDFLAGS "${LINKER_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${LINKER_FLAGS} -T ${LINKER_SCRIPT}")

ENABLE_LANGUAGE(ASM CXX)

PROJECT(MSP430FR5994)
ADD_EXECUTABLE(MSP430FR5994 src/main.cpp src/rt.S)
